2000-11-30  Mikhael Goikhman  <migo@homemail.com>

	* index.html, download.html: increased version number to 2.3.24

2000-11-26  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	remove "NEWS FLASH", show a beta version too, use 2 columns
	* download.html:
	separate links to tar.gz and tar.bz2 packages

	* fvwm-cats/index.html:
	* fvwm-cats/cassy.jpg:
	* fvwm-cats/murzilka.jpg:
	new photos and info about my cats

	* generated/{FAQ,NEWS}.html:
	regenerated

2000-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.23

2000-11-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	added to trivia

2000-11-11  Mikhael Goikhman  <migo@homemail.com>

	* download.html: increased version number to 2.3.22
	* mod_initialization.html: updated info about module arg 3

2000-10-27  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Add borders, vertically align to the top.
	Another screenshot, this one from MURAKAMI Tomokazu.

2000-10-26  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html:
	A flood of screenshots, Andre Bonhote, Kendrick Vargas, and Tenebrae.

2000-10-18  Mikhael Goikhman  <migo@homemail.com>

	* cvs.html: reverse automake & autoreconf order, some additions

2000-10-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_initialization.html:
	updated documentation of number of module arguments

2000-10-04  Mikhael Goikhman  <migo@homemail.com>

	* generated/{FAQ,NEWS}.html: regenerated
	* download.html: added rpm link, currently outside of fvwm.org
	* cvs.html: small corrections

2000-09-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	updated pictures of kassandra and geoffrey

2000-09-07  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html,generated/NEWS.html: regenerated.

2000-09-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.21

2000-07-04  Dominik Vogt  <dominik.vogt@gmx.de>
