@@ -13,7 +13,13 @@
 Note, the changes for the last STABLE release start with release
 <A HREF="#2.2.4">2.2.4</A>.
 
-Changes in beta release 2.3.24 (not released yet)
+Changes in beta release 2.3.26 (not released yet)
+
+Changes in beta release 2.3.25 (2000-12-05)
+
+* Removed the now obsolete 'Recapture' option of the BusyCursor command.
+
+Changes in beta release 2.3.24 (2000-11-28)
 
 * WindowId and WarpToFunction have been enhanced to handle windows on
   different screens and unmanaged windows.
@@ -1599,7 +1605,7 @@ pl1 to pl2
 </pre>
     <hr>
 <!-- This file automatically generated by txt2html.sh
-     on Sun Nov 26 23:13:10 IST 2000 -->
+     on Wed Dec  6 21:25:02 IST 2000 -->
   </body>
 </html>
 
