@@ -12,39 +12,39 @@
     The icons that used to be part of the fvwm source distribution are
 now accessible separately.
     <ul>
-      <li><a href="ftp:generated/icon_download/fvwm_icons.tgz">
+      <li><a href="generated/icon_download/fvwm_icons.tgz">
 	  Download</a> Fvwm Icons tgz format.  Note, make a directory
 	to hold the icons and put the "tgz" file in the directory before
 	unpacking.
-      <li>View the <a href="http:generated/icon_shots/side.gif">
+      <li>View the <a href="generated/icon_shots/side.gif">
 	  side</a> pixmaps.
-      <li>View the <a href="http:generated/icon_shots/banner.gif">
+      <li>View the <a href="generated/icon_shots/banner.gif">
 	  banner</a> pixmaps.
-      <li>View more <a href="http:generated/icon_shots/banner2.gif">
+      <li>View more <a href="generated/icon_shots/banner2.gif">
 	  banner</a> pixmaps.
-      <li>View the <a href="http:generated/icon_shots/icons.gif">
+      <li>View the <a href="generated/icon_shots/icons.gif">
 	  icon</a> pixmaps.
-      <li>View the <a href="http:generated/icon_shots/mini1.gif">
+      <li>View the <a href="generated/icon_shots/mini1.gif">
 	  button and mini</a> pixmaps (part 1).
-      <li>View the <a href="http:generated/icon_shots/mini2.gif">
+      <li>View the <a href="generated/icon_shots/mini2.gif">
 	  button and mini</a> pixmaps (part 2).
     </ul>
     Now we provide a few sounds in .au format for FvwmEvent.
     <ul>
-    <li><a href="ftp:generated/sounds_download/fvwm_sounds.tgz">
+    <li><a href="generated/sounds_download/fvwm_sounds.tgz">
 	  Download</a> Fvwm Sounds tgz format.  Make a directory
 	to hold the sounds, say /usr(/local/)share/sounds/fvwm, and unpack the
 	"tgz" ball in this directory.
-      <li>  <a href="http:sounds/clong.au">
+      <li>  <a href="sounds/clong.au">
 	  clong.au</a> can be used for (de)iconify events.
-      <li><a href="http:sounds/gong.au">
+      <li><a href="sounds/gong.au">
 	  gong.au</a> can be used at FvwmEvent startup.
-      <li><a href="http:sounds/pook.au">
+      <li><a href="sounds/pook.au">
 	  pook.au</a> can be used for destroy_window events.
-      <li><a href="http:sounds/slide.au">
+      <li><a href="sounds/slide.au">
 	  slide.au</a> can be used for (de)windowshade, new_page, new_desk 
 	events.
-      <li><a href="http:sounds/wipe.au">
+      <li><a href="sounds/wipe.au">
 	  wipe.au</a> can be used for add_window events.
     </ul>
     
